--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "jest --verbose",
-    "lint": "eslint ."
+    "lint": "eslint . --fix"
   },
   "author": "Chen Xu",
   "license": "MIT",
