--- a/part7/blogapp/backend/package.json
+++ b/part7/blogapp/backend/package.json
@@ -25,8 +25,11 @@
   },
   "devDependencies": {
     "eslint": "^8.43.0",
+    "eslint-config-prettier": "8.9.0",
+    "eslint-plugin-prettier": "5.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "prettier": "3.0.0",
     "supertest": "^6.3.3"
   },
   "jest": {
