--- a/part7/blogapp/frontend/package.json
+++ b/part7/blogapp/frontend/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.2.3",
     "http-proxy-middleware": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,10 +46,12 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "cypress": "^12.17.1",
+    "deep-freeze": "^0.0.1",
     "eslint-config-prettier": "8.9.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-prettier": "5.0.0",
+    "json-server": "^0.17.3",
     "prettier": "3.0.0"
   }
 }
