--- a/part7/blogapp/frontend/package.json
+++ b/part7/blogapp/frontend/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject",
     "eslint": "eslint .",
     "cypress:open": "cypress open",
@@ -52,6 +52,7 @@
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-prettier": "5.0.0",
     "json-server": "^0.17.3",
-    "prettier": "3.0.0"
+    "prettier": "3.0.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
