--- a/part3/fly.toml
+++ b/part3/fly.toml
@@ -1,25 +1,28 @@
-# fly.toml app configuration file generated for bitter-frost-5220 on 2023-06-15T08:14:08+03:00
+# fly.toml app configuration file generated for part3-v2 on 2024-01-20T09:23:26+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "bitter-frost-5220"
+app = "part3-v2"
 primary_region = "arn"
 
+[build]
+
+[env]
+  PORT = "3000"
+
+[processes]
+  app = "node index.js"
+
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-
-[env]
-  PORT = "8080" # add this
-
-[experimental]
-  auto_rollback = true
-
-[[services]]
-  http_checks = []
-  internal_port = 8080 
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
