--- a/part7/blogapp/frontend/package.json
+++ b/part7/blogapp/frontend/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false --env=jsdom",
     "eject": "react-scripts eject",
-    "eslint": "eslint .",
+    "eslint": "eslint . --fix",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run"
   },
