--- a/part7/blogapp/backend/package.json
+++ b/part7/blogapp/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "8.9.0",
     "eslint-plugin-prettier": "5.0.0",
